[tool.poetry]
name = "runwhen-keywords"
version = "0.0.1"
description = "A set of RunWhen published keywords and python libraries"
license = "Apache-2.0"
authors = ["Kyle Forster <kyle.forster@runwhen.com>","Jonathan Funk <jonathan.funk@runwhen.com>"]
packages = [
  { include = "RW"}
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
robotframework = ">=4.1.2"
prometheus-client = ">=0.11.0"
ruamel-base = ">=1.0.0"
ruamel-yaml = ">=0.17.20"
kubernetes = ">=0.0"
google-cloud-monitoring = ">=0.0"
google-cloud-logging = ">=0.0"
protobuf = ">=0.0"
rocketchat-api = ">=0.0"
boto3 = ">=0.0"
dnspython = ">=0.0"
pyopenssl = ">=0.0"
slack-sdk = ">=0.0"
python-benedict = ">=0.0"
sdcclient = ">=0.16"
snscrape = ">=0.4.3.20220106"
jq = ">=1.3.0"
pandas = ">=1.5.2"
jmespath = ">=1.0.1"
datadog-api-client = "2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
